--- a/sprint-1/compose.yaml
+++ b/sprint-1/compose.yaml
@@ -32,4 +32,10 @@ services:
     ports:
       - "4200:4200"
     depends_on:
-      - backend
+      backend:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4200"]
+      interval: 5s
+      timeout: 2s
+      retries: 10
