--- a/.github/workflows/CI pipeline.yml
+++ b/.github/workflows/CI pipeline.yml
@@ -3,7 +3,6 @@ name: CI Pipeline
 on:
   push:
     branches: ["master"]
-  pull_request:
 
 permissions:
   contents: write
@@ -11,65 +10,66 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      CI: "true"  # important for headless Chrome
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-        cache: "pip"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: "pip"
 
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install flake8 pytest allure-pytest
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./sprint-1/requirements.txt
+          pip install flake8 pytest allure-pytest
 
-    - name: Install Chrome & Chromedriver
-      run: |
-        google-chrome --version
-        chromedriver --version
+      - name: Install Chrome & Chromedriver
+        run: |
+          google-chrome --version
+          chromedriver --version
 
-    - name: Start docker services (webshop)
-      uses: hoverkraft-tech/compose-action@v2.0.1
-      with:
-        compose-file: "./sprint-1/compose.yaml"
+      - name: Start docker services
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "./sprint-1/compose.yaml"
 
-    - name: Lint with flake8
-      run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Wait for frontend to be ready
+        run: |
+          for i in {1..30}; do
+            if curl -s http://localhost:4200 > /dev/null; then
+              echo "✅ Frontend is up!"
+              break
+            fi
+            echo "⏳ Waiting for frontend..."
+            sleep 2
+          done
 
-    - name: Wait for frontend (CI readiness check)
-      run: |
-        for i in {1..30}; do
-          if curl -s http://localhost:4200 > /dev/null; then
-            echo "✅ Frontend is up!"
-            break
-          fi
-          echo "⏳ Waiting for frontend..."
-          sleep 2
-        done
+      - name: Lint Python code
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Run Selenium tests & collect Allure results
-      run: |
-        pytest ./sprint-1 --alluredir=./reports/allure-results
+      - name: Run tests and collect Allure results
+        run: |
+          pytest ./sprint-1 --alluredir=./reports/allure-results
 
-    - name: Generate Allure report history
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      with:
-        allure_results: ./reports/allure-results
-        allure_history: ./reports/allure-history
-        keep_reports: 50
+      - name: Generate Allure report history
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: ./reports/allure-results
+          allure_history: ./reports/allure-history
+          keep_reports: 50
 
-    - name: Deploy Allure report to GitHub Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./reports/allure-history
+      - name: Deploy Allure report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v2
+        if: always()
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./reports/allure-history
