--- a/.github/workflows/CI pipeline.yml
+++ b/.github/workflows/CI pipeline.yml
@@ -54,6 +54,10 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+      - name: Print frontend logs
+        run: docker logs frontend || true
+
+
       - name: Run tests and collect Allure results
         run: |
           pytest ./sprint-1 --alluredir=./reports/allure-results
