--- a/sprint-1/compose.yaml
+++ b/sprint-1/compose.yaml
@@ -9,6 +9,10 @@ services:
       - MYSQL_ROOT_PASSWORD=test1234
     ports:
       - "3306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 5
 
   backend:
     image: csineva/webshop-backend:sprint-1
@@ -29,4 +33,8 @@ services:
     depends_on:
       backend:
         condition: service_started
-
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:4200" ]
+      interval: 5s
+      timeout: 2s
+      retries: 10
