--- a/sprint-1/compose.yaml
+++ b/sprint-1/compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - "3306:3306"
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 5
 
@@ -24,23 +24,11 @@ services:
       - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/webshop?serverTimezone=UTC&characterEncoding=utf8
-    healthcheck:
-      healthcheck:
-        test: [ "CMD", "curl", "-f", "http://localhost:8080 || exit 1" ]
-        interval: 5s
-        timeout: 10s
-        retries: 5
 
   frontend:
     image: csineva/webshop-frontend:sprint-1
     container_name: frontend
+    depends_on:
+      - backend
     ports:
       - "4200:4200"
-    depends_on:
-      backend:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:4200 || exit 1" ]
-      interval: 5s
-      timeout: 10s
-      retries: 5
