CI wait for frontend UI to render - try

--- a/.github/workflows/CI pipeline.yml
+++ b/.github/workflows/CI pipeline.yml
@@ -64,6 +64,18 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    - name: Wait for frontend UI to render
+      run: |
+        echo "Waiting for Angular to finish rendering..."
+        for i in {1..40}; do
+          if curl -s http://localhost:4200 | grep -q "mat-card"; then
+            echo "UI is ready!"
+            break
+          fi
+          echo "UI not ready yet..."
+          sleep 3
+        done
+
     - name: Run Selenium tests & collect Allure results
       run: |
         pytest ./sprint-1 --alluredir=./reports/allure-results
