--- a/sprint-1/compose.yaml
+++ b/sprint-1/compose.yaml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   database:
     image: mysql:8.0.36
@@ -10,9 +9,10 @@ services:
     ports:
       - "3306:3306"
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 5
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-uroot", "-ptest1234"]
+      interval: 5s
+      timeout: 3s
+      retries: 20
 
   backend:
     image: csineva/webshop-backend:sprint-1
@@ -20,10 +20,10 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    ports:
-      - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/webshop?serverTimezone=UTC&characterEncoding=utf8
+    ports:
+      - "8080:8080"
 
   frontend:
     image: csineva/webshop-frontend:sprint-1
