--- a/.github/workflows/CI pipeline.yaml
+++ b/.github/workflows/CI pipeline.yaml
@@ -40,17 +40,17 @@ jobs:
 
     - name: Wait for backend to be ready
       run: |
-        echo "Waiting for backend (http://localhost:8080/)..."
+        echo "Waiting for backend (http://localhost:8080/api/public/products)..."
         for i in {1..60}; do
-          if curl -fsS http://localhost:8080/ >/dev/null; then
+          if curl -fsS http://localhost:8080/api/public/products >/dev/null; then
             echo "✅ Backend is UP"
             break
           fi
           echo "Backend not ready yet..."
           sleep 2
         done
-        # hard fail with logs if still down
-        curl -fsS http://localhost:8080/ >/dev/null || (echo "❌ Backend never became ready"; docker logs backend || true; exit 1)
+        curl -fsS http://localhost:8080/api/products >/dev/null || (echo "❌ Backend never became ready"; docker logs backend || true; exit 1)
+
 
     - name: Wait for frontend to be ready
       run: |
