--- a/.github/workflows/CI pipeline.yaml
+++ b/.github/workflows/CI pipeline.yaml
@@ -40,9 +40,9 @@ jobs:
 
     - name: Wait for backend to be ready
       run: |
-        echo "Waiting for backend (http://localhost:8080/api/public/products)..."
+        echo "Waiting for backend (http://localhost:8080/api/products)..."
         for i in {1..60}; do
-          if curl -fsS http://localhost:8080/api/public/products >/dev/null; then
+          if curl -fsS http://localhost:8080/api/products >/dev/null; then
             echo "✅ Backend is UP"
             break
           fi
